# rust-daas

./: .appveyor.yml  .travis.yml  Cargo.toml  README.md  SUMMARY.md  book.json
docs/: daas-pattern.md  handbook.md  index.html  lrm.md  reference-couchdb.md  reference-kafka.md  reference-material.md  reference-rust.md
src/: broker.rs  couchdb.rs  daas.rs  data_service.rs  hello_world.rs  lib.rs  processor.rs  sourcing.rs  staging.rs
src/database/: doc-upsert_existing_doc.json
tests/: rust-daas.postman_collection.json  web-service-tests.rs
tests/database/: doc-12345.json
workshop/: SUMMARY.md  daas-pattern.md  handbook.md  wrapup.md
workshop/module-01/: 01-section-02.md  01-section-03.md  daas-pattern.md  section-01.md  section-04.md
workshop/module-02/: 02-section-02.md  02-section-04-1.md  02-section-04-2.md  02-section-04-3.md  02-section-04-4.md  02-section-04.md  build-rust-project.md  module-02.md  section-01.md  section-03.md  section-04-2.md  section-04-3.md  section-04-4.md  section-05.md
workshop/module-03/: 03-section-01-1.md  03-section-01-2.md  03-section-01-3.md  03-section-01.md  03-section-02-1.md  03-section-02-2.md  03-section-02-3.md  03-section-02.md  03-section-03-1.md  03-section-03-2.md  03-section-03-3.md  03-section-03.md  module-03.md  section-01-1.md  section-01-2.md  section-01-3.md  section-01.md  section-02-1.md  section-02-2.md  section-02-3.md  section-02.md  section-03-1.md  section-03-2.md  section-03-3.md
workshop/module-04/: 04-section-01.md  04-section-02.md  04-section-03.md  04-section-04.md  04-section-05.md  (+1 more)
(+14 files in other folders)
