[package]
name = "rust-daas"
version = "0.0.1"
authors = ["dsietz"]
edition = "2018"
license = "Apache-2.0"
exclude = [
    "target/*",
]

[lib]
name = "daas"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "dsietz/rust-daas" }
appveyor = { repository = "dsietz/rust-daas" }
coveralls = { repostiory = "dsietz/rust-daas", branch = "master" }
is-it-maintained-issue-resolution = { repository = "dsietz/rust-daas" }
is-it-maintained-open-issues = { repository = "dsietz/rust-daas" }
maintenance = {status = "as-is"}

[dependencies]
serde ="1.0"
serde_derive = "1.0"
base64 = "0.10.1"
json = "0.11.13"
actix-web = "0.7"
bytes = "0.4"
roadrunner = "0.1.1"
tokio-core = "0.1.17"
hyper = "0.11.0"